minor fixes
- fixing horizontal scroll
- fixing cutted title text
- globalizing some variables
- fixing the possibility to have no dashboard button selected

--- a/pages/dashboard/style.css
+++ b/pages/dashboard/style.css
@@ -10,6 +10,8 @@
   margin: 10px 20px;
   transform: translateX(236px) translateY(131px);
   max-width: 625px;
+  width: min-content;
+  overflow: visible;
 }
 
 .titles h1,
@@ -17,7 +19,6 @@
   margin: 0;
   line-height: 36px;
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 
